--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -156,6 +156,7 @@ allow 151.80.148.159;
 allow 152.53.53.154;
 allow 154.16.116.61;
 allow 154.26.159.157;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.19.230.94;
@@ -288,6 +289,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -646,6 +648,7 @@ allow 194.233.174.56;
 allow 194.26.192.77;
 allow 194.62.248.21;
 allow 195.160.220.104;
+allow 195.16.73.134;
 allow 195.176.3.19;
 allow 195.176.3.20;
 allow 195.176.3.23;
@@ -686,6 +689,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -890,6 +894,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -913,6 +918,7 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -1125,6 +1131,7 @@ allow 2a03:94e0:ffff:185:243:218:0:35;
 allow 2a03:94e0:ffff:185:243:218:0:41;
 allow 2a03:94e0:ffff:185:243:218:0:46;
 allow 2a03:94e0:ffff:185:243:218:0:89;
+allow 2a03:94e0:ffff:195:16:73:0:134;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1415,6 +1422,7 @@ allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
+allow 35.174.217.68;
 allow 37.114.41.119;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1427,7 +1435,6 @@ allow 37.252.254.33;
 allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
-allow 3.85.138.119;
 allow 38.97.116.244;
 allow 41.216.183.87;
 allow 45.11.59.28;
@@ -1703,6 +1710,8 @@ allow 93.95.225.141;
 allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.230.165;
+allow 93.95.231.14;
+allow 93.95.231.88;
 allow 93.99.104.128;
 allow 93.99.104.18;
 allow 93.99.104.194;
