--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -158,7 +158,6 @@ allow 151.80.148.159;
 allow 152.53.53.154;
 allow 154.16.116.61;
 allow 154.26.159.157;
-allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.19.230.94;
@@ -292,6 +291,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -691,7 +691,6 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
-allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -802,6 +801,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
@@ -895,7 +895,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -920,7 +919,6 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -1167,7 +1165,6 @@ allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
-allow 2a04:9dc0:31::c0cc:fb;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1372,7 +1369,6 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:3ea:372::1;
@@ -1426,10 +1422,12 @@ allow 31.129.22.65;
 allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 3.208.111.202;
 allow 35.0.127.52;
 allow 37.114.41.119;
 allow 37.1.201.144;
 allow 37.120.190.85;
+allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.220.86.167;
 allow 37.228.129.128;
@@ -1561,7 +1559,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.147.86.91;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
@@ -1632,7 +1629,6 @@ allow 82.221.131.5;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
-allow 83.97.20.251;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.239.46.144;
@@ -1646,7 +1642,6 @@ allow 85.17.9.83;
 allow 85.204.116.92;
 allow 85.204.116.93;
 allow 85.215.76.62;
-allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.104.194.13;
 allow 86.104.75.99;
