--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -158,7 +158,6 @@ deny 151.80.148.159;
 deny 152.53.53.154;
 deny 154.16.116.61;
 deny 154.26.159.157;
-deny 155.138.161.171;
 deny 156.67.111.146;
 deny 160.119.249.240;
 deny 162.19.230.94;
@@ -292,6 +291,7 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -691,7 +691,6 @@ deny 199.195.253.124;
 deny 199.195.253.156;
 deny 199.195.253.180;
 deny 199.195.253.247;
-deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4060:a01f::12a6;
 deny 2001:1af8:4700:a114:6::1;
@@ -802,6 +801,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
+deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bf0:666::666;
@@ -895,7 +895,6 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
-deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.26.133.152;
 deny 23.94.211.25;
@@ -920,7 +919,6 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::5;
@@ -1167,7 +1165,6 @@ deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
-deny 2a04:9dc0:31::c0cc:fb;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1372,7 +1369,6 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:3ea:372::1;
@@ -1426,10 +1422,12 @@ deny 31.129.22.65;
 deny 31.13.195.60;
 deny 31.133.0.210;
 deny 31.42.185.134;
+deny 3.208.111.202;
 deny 35.0.127.52;
 deny 37.114.41.119;
 deny 37.1.201.144;
 deny 37.120.190.85;
+deny 37.120.239.59;
 deny 37.187.5.192;
 deny 37.220.86.167;
 deny 37.228.129.128;
@@ -1561,7 +1559,6 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
-deny 54.147.86.91;
 deny 5.42.80.232;
 deny 5.42.80.233;
 deny 5.42.80.234;
@@ -1632,7 +1629,6 @@ deny 82.221.131.5;
 deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
-deny 83.97.20.251;
 deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.239.46.144;
@@ -1646,7 +1642,6 @@ deny 85.17.9.83;
 deny 85.204.116.92;
 deny 85.204.116.93;
 deny 85.215.76.62;
-deny 85.239.41.130;
 deny 85.93.218.204;
 deny 86.104.194.13;
 deny 86.104.75.99;
