--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -158,6 +158,7 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.53.53.154;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
+set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.19.230.94;
@@ -291,7 +292,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -691,6 +691,7 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
+set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4060:a01f::12a6;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
@@ -1422,7 +1423,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.195.60;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.208.111.202;
+set_real_ip_from 34.196.147.181;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1531,6 +1532,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
