--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -1,4 +1,3 @@
-allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -34,9 +33,7 @@ allow 2001:638:301:f732::150;
 allow 2001:678:6d4:5130::2;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
-allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
-allow 2001:67c:289c:2::235;
 allow 2001:67c:289c::25;
 allow 2001:67c:289c:4::77;
 allow 2001:67c:289c:4::78;
@@ -115,6 +112,7 @@ allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 2400:8901::f03c:93ff:fe68:23b3;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
+allow 2400:d320:2202:5765::1;
 allow 2400:d321:2195:2012::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
@@ -127,7 +125,6 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::5;
@@ -137,9 +134,6 @@ allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
-allow 2602:fccf:310:1::a;
-allow 2602:fccf:310:1::b;
-allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
@@ -259,6 +253,8 @@ allow 2607:5300:60:566f::1;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f130:0:10d::64;
+allow 2620:18c:0:192::211;
+allow 2620:18c:0:192::212;
 allow 2620:7:6001::120;
 allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
@@ -402,6 +398,7 @@ allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:de01:200::23;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
+allow 2a07:b242:1000:1300:f250:8f0a:cdba:4d76;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
