--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,3 +1,4 @@
+deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4060:a01f::12a6;
 deny 2001:1af8:4700:a114:6::1;
@@ -33,7 +34,9 @@ deny 2001:638:301:f732::150;
 deny 2001:678:6d4:5130::2;
 deny 2001:67c:2044:1905::26;
 deny 2001:67c:2608::1;
+deny 2001:67c:289c::20;
 deny 2001:67c:289c:2::234;
+deny 2001:67c:289c:2::235;
 deny 2001:67c:289c::25;
 deny 2001:67c:289c:4::77;
 deny 2001:67c:289c:4::78;
@@ -369,6 +372,7 @@ deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
+deny 2a05:541:141:2c::1;
 deny 2a05:541:150:6::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:67c6::1;
